2008-07-24  David Hyatt  <hyatt@apple.com>

        Fix for bug 18673, crash when using full page zoom on generated content.  Don't call
        intrinsicSizeChanged when we are first setting our style.

        Reviewed by olliej

        * ChangeLog:
        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::setStyle):

2008-07-24  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Eric.

        Bug 20053: .in files should use a custom format instead of XML

        - Remove our XML parser perl module (XML::Tiny)

        - Add a custom perl parser

        - Move XML files to the new format

        * bindings/scripts/InFilesParser.pm: Added.
        * bindings/scripts/XMLTiny.pm: Removed.
        * dom/make_names.pl: Switched to our new
        parser.

        * html/HTMLAttributeNames.in: Switched to
        our custom format.
        * html/HTMLTagNames.in: Ditto.
        * svg/svgattrs.in: Ditto.
        * svg/svgtags.in: Ditto.
        * svg/xlinkattrs.in: Ditto.
        * xml/xmlattrs.in: Ditto.

2008-07-23  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Eric.

        Bug 19588: CRASH doing open() on destroyed window
        https://bugs.webkit.org/show_bug.cgi?id=19588

        Add frame's page null check as it could have been
        detached from the page.

        Test: fast/frames/crash-removed-iframe.html

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::windowProtoFuncOpen):
        * page/FrameTree.cpp:
        (WebCore::FrameTree::find):

2008-07-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        - fix a leak when using hex color values in CSS variables

        - fix CSSOM access to hex color values in variables declarations

        Test: fast/css/variables/color-hex-test.html

        Added a new unit/type, CSS_PARSER_HEXCOLOR, which serves as the unit for
        CSSParserValues coming from colors in hex notation. CSSParserValues can